Changelog
=========

What follows is a history of changes from release to release.  More detail
about the issues mentioned here can be found at the issue tracker, at::

    https://oodt.jpl.nasa.gov/jira/browse/CA


1.2.5 — TBD
-----------

• Rebuild the catalog after ingest so that sites and protocols appear when
  using the new RDF server.


1.2.4 — Groups In SPAAAAACE!
----------------------------

• Support CA-1001: delete old committees on upgrade so that
  Group-Space–based can replace them.


1.2.3 — NCI Deployment
----------------------

This release updates the upgrade process of the EDRN site policy so that the
EDRN portal is left in a state where it's ready to be scanned by Rational
AppScan:

• Content rules are disabled (no email notifications)
• Link integrity checks are disabled
• Routine RDF ingest is disabled
• The portal "from" email address is set to a developer's email.


1.2.2 — Upgrades
----------------

Made compatible with Plone 4.1.5 and eea.facetednavigation 4.5.  Also
addressed the following issues:

• CA-965 - Log the upgrade process
• CA-982 - Improper Google Analytics javascript


1.2.1 — Screw Staging
---------------------

This release includes:

* CA-917 - A framework for migrating content from duplicate-but-unofficial
  instances of the EDRN public portal to future official deployments of the
  EDRN public portal.
* CA-927 - Science Data tab broken on latest EDRN Public Portal


1.2.0 — Third Time's the Charm
------------------------------

This release includes the following:

* CA-841 - Project flags cleared and disassociated from Collaborative Groups
  (from Kincaid via IM)
* Locks some versions of dependent components
* Updates portal database from profile 4 to 5.  Profile 4 corresponds to
  edrn.nci.nih.gov-4.1-FINAL and was deployed at NCI in December 2011.
* Upgrades to Plone 4.1 and EEA's Faceted Navigation 4.1
* CA-872 - Tabs gone from Collaborative Groups post-4.1.4.