@@ -5,23 +5,22 @@
 [buildout]
 extends =
     http://tumor.jpl.nasa.gov/repo/edrn/portal/etc/base.cfg
-    http://good-py.appspot.com/release/dexterity/1.0?plone=4.1
     setup.cfg
 package-name = edrnsite.policy
 versions = versions
 parts += mkrelease
 
 [versions]
-plone.app.ldap = 1.2.6
+# plone.app.ldap = 1.2.6
 python-ldap = 2.3.13
-zc.recipe.egg = 1.3.2
-zc.buildout = 1.5.2
-eea.facetednavigation = 4.5
+# zc.recipe.egg = 1.3.2
+# zc.buildout = 1.5.2
+# eea.facetednavigation = 4.5
 # See https://github.com/collective/collective.js.jqueryui/issues/15
-collective.js.jqueryui = 1.8.16.9
-plone.app.jquery = 1.4.4
+# collective.js.jqueryui = 1.8.16.9
+# plone.app.jquery = 1.4.4
 # Work around a bug in Plone 4.1.5
-Products.TinyMCE = 1.2.12
+# Products.TinyMCE = 1.2.12
 
 [test]
 recipe   = collective.xmltestreport
