@@ -14,7 +14,7 @@ modification_date: 2009/06/19 17:19:51.904 GMT-5
 creators: admin
 contributors: 
 rights: 
-allowDiscussion: False
+allowDiscussion: 0
 excludeFromNav: False
 presentation: False
 tableContents: False
