@@ -15,6 +15,7 @@ eggs =
     edrnsite.portlets
     edrnsite.misccontent
     edrnsite.collaborations
+    edrnsite.vanity
     eke.knowledge
     eke.publications
     eke.site
